--- a/shared/src/main/res/values-de/strings.xml
+++ b/shared/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
     <!--
-  ~ Copyright (C) 2020 Luke Klinker
+  ~ Copyright (C) 2017 Luke Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,7 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Pulse</string>
     <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
     <string name="app_title">Pulse</string>
@@ -447,6 +447,7 @@ Nach dem Beenden müssen Sie sich in allen anderen Geräten neu einloggen. Fortf
     <string name="contact_card">Kontakt</string>
     <string name="conversation_with">Unterhaltung mit %1$s</string>
     <string name="send">Senden</string>
+    <!-- Passcode Entry -->
     <!-- Other -->
     <string name="updating_database">Finde die neusten Nachrichten...</string>
     <string name="dashclock_description">Ungelesene SMS/MMS Information</string>
